[package]
name = "ISP-SDK"
version = "0.1.0"
edition = "2021"
authors = ["team@icantool.app"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "easy to use isp tool"
homepage = "https://github.com/PrimLabs/ISP-SDK"
repository = "https://github.com/PrimLabs/ISP-SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"

[dependencies]
ic-cdk = "0.5.6"
ic-agent = "0.20.0"
candid = "0.7.16"
serde = "1.0.144"
garcon = "0.2.3"
tokio = { version = "1", features = ["full"] }
sha256 = "1.0.3"
rayon = "1.5.3"
hex = "0.4.3"