[package]
name = "ISP-SDK"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "easy to use isp tool"
homepage = "https://github.com/PrimLabs/ISP-SDK"
repository = "https://github.com/PrimLabs/ISP-SDK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "isp_sdk"

[dependencies]
ic-cdk = "0.6.0"
ic-agent = "0.22.0"
candid = "0.8.2"
serde = "1.0.144"
garcon = "0.2.3"
hex = "0.4.3"

[dependencies.uuid]
version = "1.2.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]