[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ic-cdk = "0.6.0"
ic-agent = "0.21.0"
candid = "0.8.2"
serde = "1.0.144"
garcon = "0.2.3"
tokio = { version = "1", features = ["full"] }
sha256 = "1.0.3"
rayon = "1.5.3"
hex = "0.4.3"
ISP-SDK = { path = "../../ISP-SDK"}